비밀번호 재설정 페이지 완료

--- a/password-reset.html
+++ b/password-reset.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>로그인 - 문자빨리</title> 
+    <title>비밀번호 재설정 - 문자빨리</title> 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- css -->
@@ -30,35 +30,29 @@
             </div>
         </header>
 
-        <section class="singInPage contentSize">
-            <h2 class="title01">로그인</h2>
-            <ul class="linkBox">
-                <li><a href="">아이디 찾기</a></li>
-                <li class="active"><a href="">비밀번호 재설정</a></li>
-            </ul>
+        <section class="passwordPage contentSize">
+            <h2 class="title01">비밀번호 재설정</h2>
+            <p>새롭게 재설정할 비밀번호를 입력해주세요.</p>
             <form>
                 <fieldset class="width400">
                     <ul class="inputBox">
                         <li>
+                            <label for="">새 비밀번호</label>
                             <div>
-                                <input type="text" placeholder="아이디를 입력하세요">
+                                <input type="text" placeholder="영문,숫자,특수문자 포함, 8~16자">
                             </div>
                         </li>
                         <li>
+                            <label for="">새 비밀번호 확인</label>
                             <div>
-                                <input type="text" placeholder="비밀번호를 입력하세요">
+                                <input type="text" placeholder="새 비밀번호 확인">
                             </div>
                         </li>
                     </ul>
-                    <input type="checkbox" id="IDSave"><label for="IDSave">아이디 저장</label>
-                    <input type="submit" value="로그인" class="btn-color">
+                    <input type="submit" value="확인" class="btn-color">
+                    <input type="reset" value="취소" class="btn-border">
                 </fieldset>
             </form>
-            <div class="linkArea">
-                <a href="">아이디찾기</a>
-                <a href="">비밀번호 재설정</a>
-            </div>
-            <a href="" class="btn-border width400">회원가입</a>
         </section>
 
         <footer>
