대쉬 페이지 시작

--- a/find-id-result.html
+++ b/find-id-result.html
@@ -30,24 +30,22 @@
             </div>
         </header>
 
-        <section class="idResultPage contentSize">
+        <section class="idResultPage width400">
             <h2 class="textHidden">회원 아이디 찾기</h2>
-            <div class="width400">
-                <p>
-                    <span>홍길동</span> 회원님,<br/>
-                    찾고자 하는 ID는
-                </p>
-                <strong>
-                    <mark>ohjuhw** </mark> 입니다.
-                </strong>
-                <time>2022.01.12 가입</time>
-                <a href="" class="btn-color">발신번호 등록</a>
-                <a href="" class="btn-border">메인으로</a>
-                <small>
-                    도용으로 의심되는 아이디가 있을 경우<br>
-                    고객센터로 신고 바랍니다.
-                </small>
-            </div>
+            <p>
+                <span>홍길동</span> 회원님,<br/>
+                찾고자 하는 ID는
+            </p>
+            <strong>
+                <mark>ohjuhw** </mark> 입니다.
+            </strong>
+            <time>2022.01.12 가입</time>
+            <a href="" class="btn-color">발신번호 등록</a>
+            <a href="" class="btn-border">메인으로</a>
+            <small>
+                도용으로 의심되는 아이디가 있을 경우<br>
+                고객센터로 신고 바랍니다.
+            </small>
         </section>
 
         <footer>
