--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -33,7 +33,7 @@
 
         <h2 class="textHidden">대시보드 홈</h2>
 
-        <div class="dashboard">
+        <div class="dashboardPage">
             <aside class="leftAside">
                 <div>
                     <p>
@@ -78,8 +78,32 @@
                 </div>
             </aside>
 
-            <section>
-                <h3>청개구리 회원님 안녕하세요!</h3>
+            <section class="homePage">
+                <div>
+                    <h3>청개구리 회원님 안녕하세요!</h3>
+
+                </div>
+                <footer>
+                    <div>
+                        <ul>
+                            <li><a href="">이용약관</a></li>
+                            <li><a href="">개인정보처리방침</a></li>
+                        </ul>
+                        <h2><img src="../images/logo-color.png" alt="문자빨리"></h2>
+                        <address>
+                            <p>소프트웨어 및 공급업 (주)스마트퓨쳐</p>
+                            <p>대표자 홍운기</p>
+                            <p>사업자등록번호 개발 616-86-29368</p>
+                            <p>주소 서울특별시 서초구 강남대로 275, 8층 (서초동, 강남메인타워)</p>
+                            <p>대표번호 070-7703-6553</p>
+                            <p>팩스번호 02-521-7526</p>
+                        </address>
+                        <div>
+                            <p>기업 맞춤형 서비스를 제공합니다.</p>
+                            <a href="">기억회원 문의하기</a>
+                        </div>
+                    </div>
+                </footer>
             </section>
 
             <aside class="rightAside">
@@ -136,8 +160,8 @@
                         <p>대표자 홍운기</p>
                         <p>사업자등록번호 개발 616-86-29368</p>
                         <p>주소 서울특별시 서초구 강남대로 275, 8층 (서초동, 강남메인타워)</p>
-                        <p>대표번호 070-7703-6553</p>
-                        <p>팩스번호 02-521-7526</p>
+                        <p>대표번호 <a href="">070-7703-6553</a></p>
+                        <p>팩스번호 <a href="">02-521-7526</a></p>
                     </address>
                 </footer>
             </aside>
