대시보드 홈 임시 완료

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -16,7 +16,7 @@
     <script src="js/common.js"></script>
 </head>
 <body>
-    <div class="">
+    <div>
         <header>
             <h1><a href="index.html" class="imgBox">문자빨리</a></h1>
             <nav>
@@ -78,10 +78,154 @@
                 </div>
             </aside>
 
-            <section class="homePage">
-                <div>
+            <section>
+                <div class="homePage">
                     <h3>청개구리 회원님 안녕하세요!</h3>
+                    <div class="cashArea">
+                        <div>
+                            <p>충전된 캐시</p>
+                            <strong>10,000,000</strong>
+                        </div>
+                        <div>
+                            <strong>
+                                문자
+                                <small>(부가세 별도)</small>
+                            </strong>
+                            <ul>
+                                <li>
+                                    SMS
+                                    <b>13.9</b>
+                                </li>
+                                <li>
+                                    LMS
+                                    <b>37</b>
+                                </li>
+                                <li>
+                                    MMS
+                                    <b>85</b>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <strong>사용가능 건수</strong>
+                            <ul>
+                                <li>
+                                    <p>
+                                        <b>SMS</b>
+                                        (단문)
+                                    </p>
+                                    <strong>1,333,333</strong>
+                                </li>
+                                <li>
+                                    <p>
+                                        <b>LMS</b>
+                                        (장문)
+                                    </p>
+                                    <strong>233,333</strong>
+                                </li>
+                                <li>
+                                    <p>
+                                        <b>MMS</b>
+                                        (멀티)
+                                    </p>
+                                    <strong>12,333</strong>
+                                </li>
+                            </ul>
+                            <a href="" class="btn-border">문자 보내기</a>
+                        </div>
+                    </div>
 
+                    <div class="historyArea">
+                        <strong>최근 메시지 전송내역</strong>
+                        <ul>
+                            <li>
+                                <b>전송일자</b>
+                                <b>제목</b>
+                                <b>타입</b>
+                                <b>전송건수</b>
+                                <b>성공</b>
+                                <b>실패</b>
+                                <b>전송결과</b>
+                            </li>
+                            <li>
+                                <time>2022.01.12 16:53</time>
+                                <p>문자 보낸 제목 영역 테스트 테스트</p>
+                                <p>SMS</p>
+                                <p>9,856,751</p>
+                                <p>9,856,751</p>
+                                <p>0</p>
+                                <p>완료</p>
+                            </li>
+                        </ul>
+                        <a href="" class="subText">더보기</a>
+                    </div>
+
+                    <div class="statisticsArea">
+                        <strong>메세지 사용 통계</strong>
+                        <p class="subText">최근 3개월 기준</p>
+                        <ul>
+                            <li>
+                                <p>
+                                    <b>SMS</b>(단문)
+                                </p>
+                                <strong>1,320,000</strong>
+                                <ol>
+                                    <li data-order="3">
+                                        <mark>5,800</mark>
+                                        <small>12월</small>
+                                    </li>
+                                    <li data-order="1">
+                                        <mark>867,600</mark>
+                                        <small>01월</small>
+                                    </li>
+                                    <li data-order="2">
+                                        <mark>89,500</mark>
+                                        <small>02월</small>
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                <p>
+                                    <b>LMS</b>(장문)
+                                </p>
+                                <strong>1,320,000</strong>
+                                <ol>
+                                    <li data-order="2">
+                                        <mark>95,800</mark>
+                                        <small>12월</small>
+                                    </li>
+                                    <li data-order="3">
+                                        <mark>7,600</mark>
+                                        <small>01월</small>
+                                    </li>
+                                    <li data-order="1">
+                                        <mark>989,500</mark>
+                                        <small>02월</small>
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                <p>
+                                    <b>MMS</b>(멀티)
+                                </p>
+                                <strong>1,320,000</strong>
+                                <ol>
+                                    <li data-order="1">
+                                        <mark>995,800</mark>
+                                        <small>12월</small>
+                                    </li>
+                                    <li data-order="2">
+                                        <mark>867,600</mark>
+                                        <small>01월</small>
+                                    </li>
+                                    <li data-order="3">
+                                        <mark>89,500</mark>
+                                        <small>02월</small>
+                                    </li>
+                                </ol>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <footer>
                     <div>
