마이페이지 서브타이틀 수정

--- a/dashboard/my-password copy.html
+++ b/dashboard/my-password copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원정보변경 - 마이페이지 - 문자빨리</title>
+    <title>기업회원전환 - 마이페이지 - 문자빨리</title>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- swiper -->
@@ -85,33 +85,33 @@
                         <li><a href="">기업회원전환</a></li>
                         <li><a href="">회원탈퇴</a></li>
                     </ul>
-                    <div class="width400">
-                        <strong>비밀번호 확인</strong>
-                        <small>
-                            회원님의 개인정보를 안전하게 보호하기 위해 
-                            비밀번호를 다시 한번 확인합니다.
-                        </small>
-                        <form>
-                            <fieldset>
-                                <ul class="inputBox">
-                                    <li>
-                                        <label for="">아이디</label>
-                                        <div>
-                                            <input type="text">
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <label for="">비밀번호</label>
-                                        <div>
-                                            <input type="text">
-                                        </div>
-                                        <mark class="active">*비밀번호 5번 이상 틀릴 경우 자동 로그아웃 됩니다.</mark>
-                                    </li>
-                                </ul>
-                                <input type="submit" value="확인" class="btn-color">
-                            </fieldset>
-                        </form>
-                    </div>
+                    <form>
+                        <fieldset class="width400">
+                            <legend>비밀번호 변경</legend>
+                            <ul class="inputBox">
+                                <li>
+                                    <label for="">현재 비밀번호</label>
+                                    <div>
+                                        <input type="text">
+                                    </div>
+                                </li>
+                                <li>
+                                    <label for="">새 비밀번호</label>
+                                    <div>
+                                        <input type="text" placeholder="영문, 숫자, 특수문자 포함, 8~16자">
+                                    </div>
+                                </li>
+                                <li>
+                                    <label for="">새 비밀번호 확인</label>
+                                    <div>
+                                        <input type="text" placeholder="새 비밀번호 확인">
+                                    </div>
+                                </li>
+                            </ul>
+                            <input type="submit" value="확인" class="btn-color">
+                            <input type="reset" value="취소" class="btn-border">
+                        </fieldset>
+                    </form>
                 </div>
                 <footer>
                     <div>
