--- a/dashboard/my-profile-change.html
+++ b/dashboard/my-profile-change.html
@@ -85,44 +85,46 @@
                         <li><a href="">기업회원전환</a></li>
                         <li><a href="">회원탈퇴</a></li>
                     </ul>
-                    <form>
-                        <fieldset>
-                            <legend>회원정보</legend>
-                            <p><b>아이디</b>ohjuhwaan</p>
-                            <p><b>이름</b>오주환</p>
-                            <ul class="inputBox">
-                                <li>
-                                    <label for="">휴대폰 번호</label>
-                                    <div>
-                                        <input type="text">
-                                        <button>확인</button>
-                                    </div>
-                                </li>
-                                <li>
-                                    <label for="">이메일 주소</label>
-                                    <div>
-                                        <input type="text">
-                                        <span>@</span>
-                                        <input type="text">
-                                        <select>
-                                            <option>직접입력</option>
-                                            <option></option>
-                                            <option></option>
-                                        </select>
-                                    </div>
-                                </li>
-                                <li>
-                                    <label for="">이벤트 및 혜택정보수진</label>
-                                    <div>
-                                        <input type="checkbox"><label for="">문자</label>
-                                        <input type="checkbox" checked><label for="">이메일</label>
-                                    </div>
-                                    <mark class="active">*수신동의 시 각족 혜택/이벤트 정보를 받아보실 수 있습니다.</mark>
-                                </li>
-                            </ul>
-                            <input type="submit" value="확인" class="btn-color">
-                        </fieldset>
-                    </form>
+                    <div class="width400">
+                        <strong>회원정보</strong>
+                        <form>
+                            <fieldset>
+                                <p><b>아이디</b>ohjuhwaan</p>
+                                <p><b>이름</b>오주환</p>
+                                <ul class="inputBox">
+                                    <li>
+                                        <label for="">휴대폰 번호</label>
+                                        <div>
+                                            <input type="text">
+                                            <button>확인</button>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <label for="">이메일 주소</label>
+                                        <div>
+                                            <input type="text">
+                                            <span>@</span>
+                                            <input type="text">
+                                            <select>
+                                                <option>직접입력</option>
+                                                <option></option>
+                                                <option></option>
+                                            </select>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <label for="">이벤트 및 혜택정보수진</label>
+                                        <div>
+                                            <input type="checkbox"><label for="">문자</label>
+                                            <input type="checkbox" checked><label for="">이메일</label>
+                                        </div>
+                                        <mark class="active">*수신동의 시 각족 혜택/이벤트 정보를 받아보실 수 있습니다.</mark>
+                                    </li>
+                                </ul>
+                                <input type="submit" value="확인" class="btn-color">
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
                 <footer>
                     <div>
