--- a/dashboard/my-password.html
+++ b/dashboard/my-password.html
@@ -85,33 +85,35 @@
                         <li><a href="">기업회원전환</a></li>
                         <li><a href="">회원탈퇴</a></li>
                     </ul>
-                    <form>
-                        <fieldset>
-                            <legend>비밀번호 변경</legend>
-                            <ul class="inputBox">
-                                <li>
-                                    <label for="">현재 비밀번호</label>
-                                    <div>
-                                        <input type="text">
-                                    </div>
-                                </li>
-                                <li>
-                                    <label for="">새 비밀번호</label>
-                                    <div>
-                                        <input type="text" placeholder="영문, 숫자, 특수문자 포함, 8~16자">
-                                    </div>
-                                </li>
-                                <li>
-                                    <label for="">새 비밀번호 확인</label>
-                                    <div>
-                                        <input type="text" placeholder="새 비밀번호 확인">
-                                    </div>
-                                </li>
-                            </ul>
-                            <input type="submit" value="확인" class="btn-color">
-                            <input type="reset" value="취소" class="btn-border">
-                        </fieldset>
-                    </form>
+                    <div class="width400">
+                        <strong>비밀번호 변경</strong>
+                        <form>
+                            <fieldset>
+                                <ul class="inputBox">
+                                    <li>
+                                        <label for="">현재 비밀번호</label>
+                                        <div>
+                                            <input type="text">
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <label for="">새 비밀번호</label>
+                                        <div>
+                                            <input type="text" placeholder="영문, 숫자, 특수문자 포함, 8~16자">
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <label for="">새 비밀번호 확인</label>
+                                        <div>
+                                            <input type="text" placeholder="새 비밀번호 확인">
+                                        </div>
+                                    </li>
+                                </ul>
+                                <input type="submit" value="확인" class="btn-color">
+                                <input type="reset" value="취소" class="btn-border">
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
                 <footer>
                     <div>
