--- a/dashboard/my-profile.html
+++ b/dashboard/my-profile.html
@@ -76,8 +76,8 @@
                 </div>
             </aside>
 
-            <section>
-                <div class="myPage">
+            <section class="myPage">
+                <div>
                     <h2>마이페이지</h2>
                     <ul>
                         <li class="active"><a href="">회원정보변경</a></li>
@@ -88,7 +88,7 @@
                     <div class="width400">
                         <strong>비밀번호 확인</strong>
                         <small>
-                            회원님의 개인정보를 안전하게 보호하기 위해 
+                            회원님의 개인정보를 안전하게 보호하기 위해<br>
                             비밀번호를 다시 한번 확인합니다.
                         </small>
                         <form>
