--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -131,7 +131,7 @@
                                     <strong>12,333</strong>
                                 </li>
                             </ul>
-                            <a href="" class="btn-border">문자 보내기</a>
+                            <a href="" class="btn2-border">문자 보내기</a>
                         </div>
                     </div>
 
