--- a/dashboard/my-profile-change.html
+++ b/dashboard/my-profile-change.html
@@ -76,8 +76,8 @@
                 </div>
             </aside>
 
-            <section>
-                <div class="myPage">
+            <section class="myPage">
+                <div>
                     <h2>마이페이지</h2>
                     <ul>
                         <li class="active"><a href="">회원정보변경</a></li>
