--- a/dashboard/my-secession.html
+++ b/dashboard/my-secession.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기업 정보 - 마이페이지 - 문자빨리</title>
+    <title>회원탈퇴 - 마이페이지 - 문자빨리</title>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- swiper -->
@@ -77,7 +77,7 @@
             </aside>
 
             <section class="myPage">
-                <div class="enterPage">
+                <div class="secessionPage">
                     <h2>마이페이지</h2>
                     <ul>
                         <li class="active"><a href="">회원정보변경</a></li>
@@ -86,26 +86,61 @@
                         <li><a href="">회원탈퇴</a></li>
                     </ul>
                     <div>
-                        <strong>기업 정보</strong>
-                        <small>회원님은 이미 기업회원 입니다.</small>
+                        <strong>회원 탈퇴</strong>
+                        <small>회원탈퇴 하시기 전에 안내사항에 동의해주시기 바랍니다.</small>
                         <div class="infoArea">
-                            <dl>
-                                <dt>회사명 (단체명)</dt>
-                                <dd>문자빨리</dd>
-                            </dl>
-                            <dl>
-                                <dt>회사 발신번호</dt>
-                                <dd>1566-8789</dd>
-                            </dl>
-                            <dl>
-                                <dt>담당자</dt>
-                                <dd>홍길동</dd>
-                            </dl>
-                            <dl>
-                                <dt>담당자 연락처</dt>
-                                <dd>010-4564-4564</dd>
-                            </dl>
+                            <ul>
+                                <li>
+                                    <img src="images/mypage-secession01.png" alt="현재 전송중이 내역 환불불가">
+                                    <strong>
+                                        현재 전송중이 내역<br>
+                                        환불불가
+                                    </strong>
+                                    <p>
+                                        회원탈퇴 시<br>
+                                        현재 전송중인 내역<br>
+                                        환불이 불가합니다.
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="images/mypage-secession02.png" alt="충전금 및 포인트 환불불가">
+                                    <strong>
+                                        충전금 및 포인트<br>
+                                        환불불가
+                                    </strong>
+                                    <p>
+                                        회원탈퇴 시<br>
+                                        잔여 충전금 및 포인트는<br>
+                                        돌려 받으실 수 없습니다.
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="images/mypage-secession03.png" alt="7일 동안 재가입 불가">
+                                    <strong>
+                                        7일 동안<br>
+                                        재가입 불가
+                                    </strong>
+                                    <p>
+                                        동일한 계정 및<br>
+                                        휴대폰번호로 7일간<br>
+                                        재가입 하실 수 없습니다.
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="images/mypage-secession04.png" alt="모든 데이터 복구불가">
+                                    <strong>
+                                        모든 데이터<br>
+                                        복구불가
+                                    </strong>
+                                    <p>
+                                        주소록, 전송결과,<br>
+                                        템플릿 등 모든 데이터<br>
+                                        복구가 불가합니다.
+                                    </p>
+                                </li>
+                            </ul>
                         </div>
+                        <button class="btn-color">본인인증 후 회원탈퇴</button>
                     </div>
                 </div>
                 <footer>
