--- a/signIn.html
+++ b/signIn.html
@@ -36,29 +36,31 @@
                 국내 최저가 비즈니스 문자<br>
                 문자빨리에 오신 것을 환영합니다.
             </p>
-            <form>
-                <fieldset class="width400">
-                    <ul class="inputBox">
-                        <li>
-                            <div>
-                                <input type="text" placeholder="아이디를 입력하세요">
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <input type="text" placeholder="비밀번호를 입력하세요">
-                            </div>
-                        </li>
-                    </ul>
-                    <input type="checkbox" id="IDSave"><label for="IDSave">아이디 저장</label>
-                    <input type="submit" value="로그인" class="btn-color">
-                </fieldset>
-            </form>
-            <div class="linkArea">
-                <a href="">아이디찾기</a>
-                <a href="">비밀번호 재설정</a>
+            <div class="width400">
+                <form>
+                    <fieldset class="width400">
+                        <ul class="inputBox">
+                            <li>
+                                <div>
+                                    <input type="text" placeholder="아이디를 입력하세요">
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <input type="text" placeholder="비밀번호를 입력하세요">
+                                </div>
+                            </li>
+                        </ul>
+                        <input type="checkbox" id="IDSave"><label for="IDSave">아이디 저장</label>
+                        <input type="submit" value="로그인" class="btn-color">
+                    </fieldset>
+                </form>
+                <div class="linkArea">
+                    <a href="">아이디찾기</a>
+                    <a href="">비밀번호 재설정</a>
+                </div>
+                <a href="" class="btn-border">회원가입</a>
             </div>
-            <a href="" class="btn-border width400">회원가입</a>
         </section>
 
         <footer>
