문자 보내기 페이지 완료

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -137,7 +137,7 @@
 
                     <div class="historyArea">
                         <strong>최근 메시지 전송내역</strong>
-                        <ul>
+                        <ul class="boardBox">
                             <li>
                                 <b>전송일자</b>
                                 <b>제목</b>
