문자 보내기 페이지 완료

--- a/dashboard/message.html
+++ b/dashboard/message.html
@@ -77,7 +77,7 @@
             </aside>
 
             <section class="messagePage">
-                <div>
+                <div class="basicPage">
                     <h2>마이페이지</h2>
                     <div class="inputArea">
                         <form>
