subTextBox module 적용했다

--- a/dashboard/charge.html
+++ b/dashboard/charge.html
@@ -79,9 +79,7 @@
             <section class="chargePage">
                 <div class="basicPage">
                     <h2>충전하기</h2>
-                    <div class="subTextBox">
-                        <small>세상에서 가장 빠른 문자발송 서비스를 이용해 보세요!</small>
-                    </div>
+                    <small class="subTextBox">세상에서 가장 빠른 문자발송 서비스를 이용해 보세요!</small>
                     <form>
                         <fieldset>
                             <div class="methodArea">
