--- a/dashboard/my-enter-info.html
+++ b/dashboard/my-enter-info.html
@@ -87,7 +87,7 @@
                     </ul>
                     <div>
                         <strong>기업 정보</strong>
-                        <small>회원님은 이미 기업회원 입니다.</small>
+                        <small class="subTextBox">회원님은 이미 기업회원 입니다.</small>
                         <div class="infoArea">
                             <dl>
                                 <dt>회사명 (단체명)</dt>
