--- a/dashboard/my-secession.html
+++ b/dashboard/my-secession.html
@@ -87,7 +87,7 @@
                     </ul>
                     <div>
                         <strong>회원 탈퇴</strong>
-                        <small>회원탈퇴 하시기 전에 안내사항에 동의해주시기 바랍니다.</small>
+                        <small class="subTextBox">회원탈퇴 하시기 전에 안내사항에 동의해주시기 바랍니다.</small>
                         <div class="infoArea">
                             <ul>
                                 <li>
