--- a/dashboard/my-enter.html
+++ b/dashboard/my-enter.html
@@ -87,7 +87,7 @@
                     </ul>
                     <div>
                         <strong>기업 정보</strong>
-                        <small>
+                        <small class="subTextBox">
                             발신번호 등록에 필요한 서류를 반드시 확인 후 제출해주세요.<br>
                             서류 미비 시 발신번호 이용이 제한됩니다.
                         </small>
