--- a/dashboard/my-profile.html
+++ b/dashboard/my-profile.html
@@ -87,7 +87,7 @@
                     </ul>
                     <div class="width400">
                         <strong>비밀번호 확인</strong>
-                        <small>
+                        <small class="subTextBox">
                             회원님의 개인정보를 안전하게 보호하기 위해<br>
                             비밀번호를 다시 한번 확인합니다.
                         </small>
