충전내역 페이지 완료

--- a/dashboard/history-charge.html
+++ b/dashboard/history-charge.html
@@ -114,9 +114,86 @@
                             <p>충전</p>
                             <p>123,123,123원</p>
                             <p>123,123원</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p></p>
+                            <p>충전</p>
+                            <p>123,123,123원</p>
+                            <p></p>
                             <p>테스트</p>
                         </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p>무통장 입금</p>
+                            <p>충전</p>
+                            <p>1,000원</p>
+                            <p>100원</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p>신용카드</p>
+                            <p>충전</p>
+                            <p>123,123,123원</p>
+                            <p>123,123원</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p></p>
+                            <p>충전</p>
+                            <p>123,123,123원</p>
+                            <p></p>
+                            <p>테스트</p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p>무통장 입금</p>
+                            <p>충전</p>
+                            <p>1,000원</p>
+                            <p>100원</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p>신용카드</p>
+                            <p>충전</p>
+                            <p>123,123,123원</p>
+                            <p>123,123원</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p></p>
+                            <p>충전</p>
+                            <p>123,123,123원</p>
+                            <p></p>
+                            <p>테스트</p>
+                        </li>
+                        <li>
+                            <time>2023.02.16</time>
+                            <p>무통장 입금</p>
+                            <p>충전</p>
+                            <p>1,000원</p>
+                            <p>100원</p>
+                            <p></p>
+                        </li>
                     </ul>
+                    <div class="pagerBox">
+                        <a href="">첫 리스트</a>
+                        <a href="">이전</a>
+                        <ol>
+                            <li class="active"><a href="">1</a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                        </ol>
+                        <a href="">다음</a>
+                        <a href="">마지막 리스트</a>
+                    </div>
                 </div>
                 <footer>
                     <div>
